@@ -124,6 +124,44 @@
 </tr>
 
 <tr>
+ <td width="40%">HP Integrated Lights-Out management device (iLO)</td>
+ <td>1</td>
+ <td>hpilo</td>
+ <td></td>
+</tr>
+
+<tr>
+ <td width="40%">HP Management Processor Device (MP)</td>
+ <td>1</td>
+ <td>hpmp</td>
+ <td></td>
+</tr>
+
+<tr>
+ <td width="40%">HP Management Processor Device (MP) for mid-range ceullular
+systems</td>
+ <td>configurable</td>
+ <td>hpmpcell</td>
+ <td></td>
+</tr>
+
+<tr>
+ <td width="40%">HP Management Processor Device (MP) for high-end ceullular
+systems</td>
+ <td>configurable</td>
+ <td>hpmpdome</td>
+ <td></td>
+</tr>
+
+<tr>
+ <td width="40%">HP Management Processor Device (MP) for HP integrity
+blade servers</td>
+ <td>1</td>
+ <td>hpmpblade</td>
+ <td></td>
+</tr>
+
+<tr>
  <td width="40%">IBM Blade Center Management Module</td>
  <td>15</td>
  <td>ibmbladecenter</td>
